--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --configuration production --output-path build",
+    "build": "ng build --configuration production --output-path ../relationships-server/client",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
