switched from Material Icons to Material Symbols
Also created utility classes for sizing icons,
including button icons.

--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
 							"src/custom-theme.scss",
 							"src/styles/variables.scss",
 							"src/styles.scss",
+							"src/styles/icons.scss",
 							"src/styles/root.css"
 						],
 						"scripts": []
